# rcs-visualizations

./: .gitignore  LICENSE  README.md  TESTING_SUMMARY.md  creeping_waves_animation.py  main.py  preview_concepts.py  pyproject.toml  render  requirements.txt  topopt.py
docs/: PERFORMANCE_TIPS.md  VISUALIZATIONS_README.md  rendering.md
scenes/: __init__.py  _common.py  creeping_waves_animation.py  creeping_waves_enhanced.py  deformation_vectors_visualization.py  optimizer_comparison_visualization.py  radar_facets_visualization.py  registry.py  topopt.py  voxel_topology_visualization.py
scripts/: clean.py  render.py  render_all_visualizations.py  render_animation.py
